--- a/client/src/components/Answer/assets/triangles/triangle-right.css
+++ b/client/src/components/Answer/assets/triangles/triangle-right.css
@@ -48,7 +48,7 @@
     background-color: #D0D0D8;
 }
 
-.triangle-right-line_prev {
+.triangle-right-line_next {
     position: absolute;
     width: 69px;
     height: 1px;
@@ -66,7 +66,7 @@
     width: 69px;
     height: 1px;
     top: 23px;
-    left: -98px;
+    right: -98px;
     background-color: #D0D0D8;
 }
 
@@ -90,6 +90,7 @@
 .triangle-right-line_selected {
     background-color: #2869E8CC;
 }
+/* 2869E866 */
 
 .answer.answer_next:hover .answer-triangle__right_small {
     border-left: 33px solid #D0D0D8;
