--- a/client/src/pages/GamePage/game-page.css
+++ b/client/src/pages/GamePage/game-page.css
@@ -1,4 +1,4 @@
-.start-page {
+.game-page {
     width: 100%;
     height: 100vh;
     position: relative;
@@ -7,7 +7,15 @@
     align-items: center;
     justify-content: flex-end;
     overflow: hidden;
+    background: #fff;
+}
+
+.start-page {
     background-image: linear-gradient(to bottom right, #ffffff 50%, rgba(40, 105, 232, 0.4) 50%);
+}
+
+.end-page {
+    background: rgba(245, 245, 247, 1);
 }
 
 .okay-component {
@@ -32,6 +40,14 @@
     margin: 0 0 1em 0;
     max-width: 100%;
 }
+.start-page__wrraper .header_mid {
+    font-size: 32px;
+    line-height: 64.96px;
+    margin: 0;
+    max-width: 100%;
+    color: rgba(208, 208, 216, 1);
+}
+
 
 @media screen and (max-width: 540px) {
     .start-page {
