--- a/client/src/pages/GameProcessPage/game-process-page.css
+++ b/client/src/pages/GameProcessPage/game-process-page.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #E5E5E5;
+    background-color: var(--main-bg-color);
 }
 
 .game-process-page-question {
